# capswitch

./: Cargo.toml  README.md  capswitch.c
src/: main.rs
